--- a/work.html
+++ b/work.html
@@ -25,98 +25,48 @@
     </nav>
   </header>
 
-  <section>
+  <section class="work-section">
     <h1>Work</h1>
 
     <div class="grid">
       <div class="grid__item">
-        <h2>Mobile web app</h2>
+        <h2>Ruby on Rails Blog</h2>
         <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+          I created this project by myself using Ruby on Rails.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/Bill-Horst/cfblog">See project on GitHub</a>
+        <br />
+        <a href="https://billsrubyblog.herokuapp.com/">Go to Blog</a>
       </div>
 
       <div class="grid__item">
-        <h2>Mobile web app</h2>
+        <h2>Chamisama Tea Ecommerce App</h2>
         <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+          I created this ecommerce app using Ruby on Rails to sell Japanese and Chinese tea.
         </p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/Bill-Horst/chamisama">See project on GitHub</a>
+        <br />
+        <a href="https://chamisama.herokuapp.com/">Go to App</a>
       </div>
 
       <div class="grid__item">
-        <h2>Mobile web app</h2>
+        <h2>My Other Portfolio</h2>
         <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+          This is my actual portfolio.
         </p>
-        <a href="#">See project on GitHub</a>
-      </div>
-
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on GitHub</a>
-      </div>
-
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on GitHub</a>
-      </div>
-
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on GitHub</a>
-      </div>
-
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on GitHub</a>
-      </div>
-
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on GitHub</a>
-      </div>
-
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on GitHub</a>
-      </div>
-
-      <div class="grid__item">
-        <h2>Mobile web app</h2>
-        <p>
-          Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-        </p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/Bill-Horst/Portfolio">See project on GitHub</a>
+        <br />
+        <a href="https://billhorst.com">See Portfolio</a>
       </div>
     </div>
   </section>
 
-  <footer>
+  <footer class="footer__flex">
     <div class="clear footer__container">
       <p class="footer__item">Find me on</p>
-      <img src="http://via.placeholder.com/30x30" class="footer__item" alt="Github">
-      <img src="http://via.placeholder.com/30x30" class="footer__item" alt="Twitter">
-      <img src="http://via.placeholder.com/30x30" class="footer__item" alt="LinkedIn">
+      <a href="https://github.com/Bill-Horst"><img src="img/github.svg" class="footer__item" alt="Github"></a>
+      <a href="https://billhorst.com"><img src="img/favicon.ico" class="footer__item" alt="Portfolio"></a>
+      <a href="https://www.linkedin.com/in/horstbill"><img src="img/linkedin.png" class="footer__item" alt="LinkedIn"></a>
     </div>
   </footer>
 
