--- a/about.html
+++ b/about.html
@@ -40,7 +40,6 @@
     <a href="files/Resume.pdf" class="button" download>Download my CV</a>
   </div>
 
-
   <div class="about__svg">
     <img src="img/hometown.svg">
   </div>
@@ -48,9 +47,9 @@
   <footer class="footer__flex">
     <div class="clear footer__container">
       <p class="footer__item">Find me on</p>
-      <img src="http://via.placeholder.com/30x30" class="footer__item" alt="Github">
-      <img src="http://via.placeholder.com/30x30" class="footer__item" alt="Twitter">
-      <img src="http://via.placeholder.com/30x30" class="footer__item" alt="LinkedIn">
+      <a href="https://github.com/Bill-Horst"><img src="img/github.svg" class="footer__item" alt="Github"></a>
+      <a href="https://billhorst.com"><img src="img/favicon.ico" class="footer__item" alt="Portfolio"></a>
+      <a href="https://www.linkedin.com/in/horstbill"><img src="img/linkedin.png" class="footer__item" alt="LinkedIn"></a>
     </div>
   </footer>
 
