--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
     <div>
       <img src="img/Bill_B_W.jpg" class="profile__portrait" alt="Bill Horst Portrait">
       <h1>Hello World!</h1>
-      <p>My name is Bill Horst. I am a <span>web</span> developer from 'Murka.</p>
-      <a href="#">Show me some code</a>
+      <p>My name is Bill Horst. I am a <span>web</span> developer from the US.</p>
+      <a href="https://github.com/Bill-Horst">Show me some code</a>
     </div>
 
     <footer class="profile__footer">
       <p class="footer__item">Find me on</p>
-      <img src="http://via.placeholder.com/30x30" class="footer__item" alt="Github">
-      <img src="http://via.placeholder.com/30x30" class="footer__item" alt="Twitter">
-      <img src="http://via.placeholder.com/30x30" class="footer__item" alt="LinkedIn">
+      <a href="https://github.com/Bill-Horst"><img src="img/github.svg" class="footer__item" alt="Github"></a>
+      <a href="https://billhorst.com"><img src="img/favicon.ico" class="footer__item" alt="Portfolio"></a>
+      <a href="https://www.linkedin.com/in/horstbill"><img src="img/linkedin.png" class="footer__item" alt="LinkedIn"></a>
 
     </footer>
   </div>
