changed wording on index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-<body> 
+<body>
 
   <header class="page-header">
     <img src="img/bill_logo.png" alt="logo" class="page-header__item">
@@ -30,7 +30,7 @@
       <img src="img/Bill_B_W.jpg" class="profile__portrait" alt="Bill Horst Portrait">
       <h1>Hello World!</h1>
       <p>My name is Bill Horst. I am a <span>web</span> developer from the US.</p>
-      <a href="https://github.com/Bill-Horst">Show me some code</a>
+      <a href="https://github.com/Bill-Horst">GitHub</a>
     </div>
 
     <footer class="profile__footer">
